Fixing some button alignment issues on mobile part 2

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -336,23 +336,13 @@ body {
 }
 
 .custom-carousel .carousel-control-prev {
-  left: -30px;
+  left: -40px;
 }
 
 .custom-carousel .carousel-control-next {
-  right: -30px;
+  right: -40px;
 }
 
-/* On mobile, bring them even closer */
-@media (max-width: 768px) {
-  .custom-carousel .carousel-control-prev {
-    left: 10px; /* Adjust for mobile screens */
-  }
-
-  .custom-carousel .carousel-control-next {
-    right: 10px; /* Adjust for mobile screens */
-  }
-}
 
 .custom-carousel .carousel-control-prev-icon,
 .custom-carousel .carousel-control-next-icon {
